--- a/package.json
+++ b/package.json
@@ -10,16 +10,30 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.9",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@prisma/client": "^6.13.0",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@shadcn/ui": "^0.0.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "graphql": "^16.11.0",
     "http-proxy-middleware": "^3.0.5",
+    "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-video-js-player": "^1.1.1",
     "sqlite3": "^5.1.7",
-    "video.js": "^8.23.3"
+    "tailwind-merge": "^3.3.1",
+    "videojs-offset": "^2.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -32,6 +46,8 @@
     "eslint-config-next": "15.4.5",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
-    "typescript": "^5"
+    "tw-animate-css": "^1.3.6",
+    "typescript": "^5",
+    "video.js": "^8.23.3"
   }
 }
