--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/inter": "^5.2.6",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/joy": "^5.0.0-beta.52",
+    "@mui/material": "^7.3.1",
+    "@mui/material-nextjs": "^7.3.0",
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
