--- a/github/workflow/docker.yml
+++ b/github/workflow/docker.yml
@@ -7,43 +7,35 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }} # owner/repo
+  IMAGE_NAME: maso2k20/stash-playlists
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write   # needed to push to GHCR
+      packages: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up QEMU (optional for multi-arch)
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
 
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Generate tags and labels
       - name: Extract metadata (tags, labels)
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ghcr.io/${{ env.IMAGE_NAME }}
           tags: |
-            # latest on pushes to main
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
-            # version tags like v1.2.3 -> tag 1.2.3
             type=semver,pattern={{version}}
-            # always push a sha tag for traceability
             type=sha,format=short
 
       - name: Build and push
@@ -52,7 +44,6 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          # If you want multi-arch, add linux/arm64 too. Unraid is usually amd64:
           platforms: linux/amd64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
