--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "6.13.0",
     "prisma": "^6.13.0",
     "@apollo/client": "^3.13.9",
     "@dnd-kit/core": "^6.3.1",
@@ -22,7 +23,6 @@
     "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.3.1",
     "@mui/material-nextjs": "^7.3.0",
-    "@prisma/client": "^6.13.0",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-icons": "^1.3.2",
