--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "6.13.0",
-    "prisma": "^6.13.0",
     "@apollo/client": "^3.13.9",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
@@ -23,6 +21,7 @@
     "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.3.1",
     "@mui/material-nextjs": "^7.3.0",
+    "@prisma/client": "6.13.0",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-icons": "^1.3.2",
@@ -39,6 +38,7 @@
     "http-proxy-middleware": "^3.0.5",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
+    "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sqlite3": "^5.1.7",
@@ -52,6 +52,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "effect": "^3.17.7",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "postcss": "^8.5.6",
