--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "effect": "^3.17.7",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "fast-check": "^4.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6",
