--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-dom": "19.1.0",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.3.1",
-    "videojs-offset": "^2.1.3"
+    "videojs-offset": "^2.1.3",
+    "read-package-up": "^11.0.0",
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -57,7 +58,6 @@
     "eslint-config-next": "15.4.5",
     "fast-check": "^4.2.0",
     "postcss": "^8.5.6",
-    "read-package-up": "^11.0.0",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5",
