--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.3.1",
     "videojs-offset": "^2.1.3",
-    "read-package-up": "^11.0.0",
+    "read-package-up": "^11.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
