--- a/package.json
+++ b/package.json
@@ -52,15 +52,18 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@prisma/client": "6.13.0",
     "autoprefixer": "^10.4.21",
     "effect": "^3.17.7",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "fast-check": "^4.2.0",
     "postcss": "^8.5.6",
+    "prisma": "^6.13.0",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5",
+    "read-package-up": "^11.0.0",
     "video.js": "^8.23.3"
   }
 }
